@@ -1,5 +1,5 @@
 TOP = ../..
 include $(TOP)/configure/CONFIG
-ARCH = vxWorks-ppc604_long
+ARCH = linux-x86
 TARGETS = cdCommands
 include $(TOP)/configure/RULES.ioc
